--- a/lab1/forza/Sudoku/Makefile
+++ b/lab1/forza/Sudoku/Makefile
@@ -3,5 +3,11 @@ CXXFLAGS+=-Wall -Wextra
 
 all: sudoku
 
-sudoku: main.cc neighbor.cc sudoku_basic.cc sudoku_min_arity.cc sudoku_min_arity_cache.cc sudoku_dancing_links.cc
+sudoku: main.cc intputfile.cc neighbor.cc sudoku_basic.cc \
+sudoku_min_arity.cc sudoku_min_arity_cache.cc \
+sudoku_dancing_links.cc
 	g++ -O2 -o $@ $^
+
+.PHONY: clean
+clean:
+	rm -f sudoku
