--- a/lab1/makefile
+++ b/lab1/makefile
@@ -1,3 +1,3 @@
 
-target: main.o intputfile.o sudoku_dancing_links.o threadpool.o  
-	g++ main.o intputfile.o sudoku_dancing_links.o threadpool.o -lpthread -o target
+sudoku_solve: main.o intputfile.o sudoku_dancing_links.o threadpool.o  
+	g++ main.o intputfile.o sudoku_dancing_links.o threadpool.o -lpthread -o sudoku_solve
