--- a/lab1/merge/c++/makefile
+++ b/lab1/merge/c++/makefile
@@ -1,3 +1,3 @@
 
 target: main.o intputfile.o sudoku_dancing_links.o threadpool.o  
-	g++ main.o intputfile.o sudoku_dancing_links.o threadpool.o -lpthread -o target
+	g++ main.o intputfile.o sudoku_dancing_links.o threadpool.o -lpthread -o target.exe
