latest ans last

--- a/lab1/makefile
+++ b/lab1/makefile
@@ -1,3 +1,7 @@
 
 sudoku_solve: main.o intputfile.o sudoku_dancing_links.o threadpool.o  
 	g++ main.o intputfile.o sudoku_dancing_links.o threadpool.o -lpthread -o sudoku_solve
+
+
+clean: 
+	rm *.o
