add -g mod, rm .vscode

--- a/Lab2/Makefile
+++ b/Lab2/Makefile
@@ -1,5 +1,5 @@
 ThreadPoolTest: ThreadPoolTest.cpp ThreadPool.cpp
-	g++ -o ThreadPoolTest -std=c++0x ThreadPoolTest.cpp ThreadPool.cpp -lpthread
+	g++ -g -o ThreadPoolTest -std=c++0x ThreadPoolTest.cpp ThreadPool.cpp -lpthread
 
 clean:
 	rm ThreadPoolTest
