--- a/Lab2/epoll/Makefile
+++ b/Lab2/epoll/Makefile
@@ -1,5 +1,5 @@
 epoll:
-	g++ -o epoll main.cpp http_server.cpp handler.cpp debug_log.cpp
+	g++ -o epoll -pthread main.cpp http_server.cpp handler.cpp debug_log.cpp ThreadPool.cpp request.cpp
 
 clean:
 	rm epoll
