--- a/Lab3/CMakeLists.txt
+++ b/Lab3/CMakeLists.txt
@@ -5,19 +5,43 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Lab3 main.cpp)
 
-# 协调者
-add_executable(coordinator coordinator/main.cpp)
+
+# 协调者##########################333
+add_executable(coordinator
+        common/loguru.cpp
+        coordinator/main.cpp
+        coordinator/CoServer.h
+        coordinator/CoServer.cpp
+        )
+
+target_link_libraries(
+        coordinator
+        pthread
+        dl
+)
 
 
-# 客户端
+# 客户端####################################
 set(CLIENT "client")
 add_executable(${CLIENT}
         client/main.cpp)
+
+# 添加 thread
+target_link_libraries(
+        ${PROJECT_NAME}
+        pthread
+)
 
 # 参与者
 set(PARTICIPANT "participant")
 add_executable(${PARTICIPANT}
         participant/main.cpp)
+
+# 添加 thread
+target_link_libraries(
+        ${PROJECT_NAME}
+        pthread
+)
 
 ##############测试
 enable_testing()
@@ -28,7 +52,7 @@ add_executable(testBlockingqueue
 add_test(NAME testBlockingqueue COMMAND testBlockingqueue)
 
 
-# 添加 socket
+# 添加 thread
 target_link_libraries(
         ${PROJECT_NAME}
         pthread
