--- a/Lab3/CMakeLists.txt
+++ b/Lab3/CMakeLists.txt
@@ -58,3 +58,9 @@ target_link_libraries(
         testBlockingqueue
         pthread
 )
+
+############测试decoder
+add_executable(testDecoder
+        test/testDecoder.cpp
+        common/Util.h
+        common/public.h)
