客户端命令编码

--- a/Lab3/CMakeLists.txt
+++ b/Lab3/CMakeLists.txt
@@ -65,6 +65,8 @@ target_link_libraries(
 #######################################33333
 add_executable(testEncoder
         common/loguru.cpp
+        common/Util.h
+        common/public.h
         test/testEncoder.cpp
 )
 
