--- a/Lab3/CmakeLists.txt
+++ b/Lab3/CmakeLists.txt
@@ -51,19 +51,14 @@ enable_testing()
 add_executable(testBlockingqueue
         common/loguru.cpp
         test/testBlockingqueue.cpp
-        coordinator/BoundedBlockingQueue.h test/testEncoder.cpp)
-add_test(NAME testBlockingqueue COMMAND testBlockingqueue)
-
-add_executable(testBlockingqueue
-        common/loguru.cpp
-        test/testBlockingqueue.cpp
-        coordinator/BoundedBlockingQueue.h test/testEncoder.cpp)
+        coordinator/BoundedBlockingQueue.h)
 add_test(NAME testBlockingqueue COMMAND testBlockingqueue)
 
 # 添加 thread
 target_link_libraries(
         testBlockingqueue
         pthread
+        dl
 )
 
 ############测试decoder
