--- a/Lab3/CmakeLists.txt
+++ b/Lab3/CmakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(kvstore2pcsystem
         main.cpp
+        coordinator/KeepAlive.cpp
+        coordinator/KeepAlive.h
         common/loguru.cpp
         coordinator/CoServer.h
         coordinator/CoServer.cpp
@@ -32,7 +34,10 @@ add_executable(coordinator
         coordinator/CoServer.h
         coordinator/CoServer.cpp
         coordinator/clientHandler.cpp
-        coordinator/clientHandler.h coordinator/participantHandler.h coordinator/participantHandler.cpp common/Util.h)
+        coordinator/clientHandler.h
+        coordinator/participantHandler.h
+        coordinator/participantHandler.cpp
+        common/Util.h coordinator/KeepAlive.cpp coordinator/KeepAlive.h)
 
 target_link_libraries(
         coordinator
