--- a/Lab3/Makefile
+++ b/Lab3/Makefile
@@ -1,9 +1,4 @@
-
-
-all:
-	echo "start to build the project"
-
-
-clean:
-	echo 'delete all the exe file'
-
+echo:
+	cd build
+	echo ""$pwd"
+	echo "hleoo"
