修改多线程版连接part

--- a/Lab3/CmakeLists.txt
+++ b/Lab3/CmakeLists.txt
@@ -18,6 +18,8 @@ add_executable(kvstore2pcsystem
         participant/PaServer.cpp
         common/Util.h
         common/Config.h
+        common/ThreadPool.h
+        common/ThreadPool.cpp
         )
 
 target_link_libraries(
