--- a/Lab3/CmakeLists.txt
+++ b/Lab3/CmakeLists.txt
@@ -28,6 +28,32 @@ target_link_libraries(
         dl
 )
 
+############################for test
+add_executable(kvstore2pcsystemTEST2
+        main.cpp
+        coordinator/KeepAlive.cpp
+        coordinator/KeepAlive.h
+        common/loguru.cpp
+        coordinator/CoServer.h
+        coordinator/CoServer.cpp
+        coordinator/clientHandler.cpp
+        coordinator/clientHandler.h
+        coordinator/participantHandler.h
+        coordinator/participantHandler.cpp
+        participant/PaServer.h
+        participant/PaServer.cpp
+        common/Util.h
+        common/Config.h
+        common/ThreadPool.h
+        common/ThreadPool.cpp
+        )
+
+target_link_libraries(
+        kvstore2pcsystemTEST2
+        pthread
+        dl
+)
+
 
 # 协调者##########################333
 add_executable(coordinator
